<resources>
    <string name="app_name">MacroTracker</string>
    <string name="add_button">Add Entry</string>
    <string name="journal_button">View Entries</string>
    <string name="home_button">Home</string>
    <string name="home_screen">home screeen</string>
    <string name="add_name">Enter name of entry:</string>
    <string name="add_protein">Enter amount of protein:</string>
    <string name="add_carb">Enter amount of carbs:</string>
    <string name="add_fat">Enter amount of fat:</string>
    <string name="estimated_amount">Estimated calories:</string>
    <string name="add_entry">Add Entry</string>
    <string name="daily_total_label">Daily Totals</string>
    <string name="set_goals_button">Set Goals</string>
    <string name="goal_header_label">Enter your total daily goals</string>
    <string name="goal_screen_protein_label">Protein: </string>
    <string name="goal_screen_carb_label">Carbs: </string>
    <string name="goal_screen_fat_label">Fat: </string>
    <string name="grams">Grams</string>
    <string name="sample_entry_name">Entry name here</string>
    <string name="default_entry_amount">0</string>
    <string name="add_goal_button">Update Goals</string>
    <dimen name="add_screen_label_size">24sp</dimen>
    <dimen name="goal_screen_label_size">24sp</dimen>
    <string name="total_cal_label">Calories: </string>
    <string name="title_activity_set_goal_screen">SetGoalScreen</string>
    <string name="journal_remove">Remove Item</string>

</resources>
